# quintessencia

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
app/: main.py
app/database/: connection.py
app/models/: context.py  message.py  role.py
app/repository/: message_repository.py
app/shared/: ai_requests.py  script.py  sheets_data.py
migrations/: env.py
migrations/versions/: 13eb8344d8a1_create_messages_table.py  54aaf8f3dd2f_create_messages_table.py
